tests/type_guards_one_sided_disabled/type_guards_one_sided_disabled.exp
Error ----------------------------------------------------------------------------------------------------- file.js:1:21

One-sided type guards are not yet supported. [unsupported-syntax]

   1| function l(x: any): implies x is number { throw "unsupported" }; // error unsupported
                          ^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- file.js:3:22

One-sided type guards are not yet supported. [unsupported-syntax]

   3| type A = (x: any) => implies x is number;
                           ^^^^^^^^^^^^^^^^^^^



Found 2 errors
